Async frame scrolling: handle fixed root backgrounds in frames https://bugs.webkit.org/show_bug.cgi?id=176261

Source/WebCore:

Based on patch by Simon Fraser <simon.fraser@apple.com>
Patch by Frederic Wang <fwang@igalia.com> on 2017-11-21
Reviewed by Antonio Gomes.

For frames with tiled backing, we register a slow-repaint object because we hit
RenderElement::styleWillChange() before we've made a backing for the iframe's RenderView so
view().compositor().supportsFixedRootBackgroundCompositing() returns false. This patch
ensures that this object is removed when setBackgroundLayerPaintsFixedRootBackground is
called. It also removes the opaque background of non-main frames with tiled backing.
This fixes a possible hit of ASSERT(!m_backgroundLayer) after r221615.

Test: compositing/tiling/tiled-drawing-async-frame-scrolling.html

* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::updateGeometry): Do not set opaque contents for frames with
tiled backing. We keep !m_isMainFrameRenderViewLayer for backward compatibility with WK1.
(WebCore::RenderLayerBacking::setBackgroundLayerPaintsFixedRootBackground): Add an early
return when m_backgroundLayerPaintsFixedRootBackground is not changed. Remove the slow
repaint object previously registered for this frame. Also add an ASSERT to ensure that a
fixed root background is only set for frames with async scrolling.
(WebCore::RenderLayerBacking::updateRootLayerConfiguration): Restrict some special handling
of background and opaqueness to the main frame.

LayoutTests:

Patch by Frederic Wang <fwang@igalia.com> on 2017-11-21
Reviewed by Antonio Gomes.

Extend tiled-drawing-async-frame-scrolling with new test cases and update expectations.

* compositing/tiling/tiled-drawing-async-frame-scrolling.html: Add two test cases with
non-white and fixed gradient background. The latter exhibits a crash fixed by that commit.
* compositing/tiling/tiled-drawing-async-frame-scrolling-expected.txt: Adjust expectation due
to spacing changes.
* platform/ios-wk2/compositing/tiling/tiled-drawing-async-frame-scrolling-expected.txt: Ditto.
Update expectation for the first case to remove the white background and add expectations for
the two new cases.
* platform/mac-wk2/compositing/tiling/tiled-drawing-async-frame-scrolling-expected.txt: Ditto.

Canonical link: https://commits.webkit.org/195960@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225092 268f45cc-cd09-0410-ab3c-d52691b4dbfc